fwb: Add ability to force show battery percentage inside icon
* Don't show if battery full, better UX
* Refresh properly on 'onOverlayChanged'

Change-Id: Id30b989aa36b303339159c91a4e20a14faf9c8b2

--- a/core/res/res/values/ex_config.xml
+++ b/core/res/res/values/ex_config.xml
@@ -160,6 +160,9 @@
     <integer name="nav_gesture_swipe_timout">250</integer>
     <!-- signification move threshold - if stays below will trigger action -->
     <integer name="nav_gesture_move_threshold">4</integer>
+
+    <!-- Whether to show battery percentage inside icon -->
+    <bool name="config_battery_percentage_show_inside_icon">false</bool>
 </resources>
 
 
