--- a/core/res/res/values/ex_symbols.xml
+++ b/core/res/res/values/ex_symbols.xml
@@ -269,4 +269,7 @@
   <java-symbol type="string" name="adb_both_active_notification_title" />
   <java-symbol type="string" name="adb_active_generic_notification_message" />
 
+  <!-- Whether to show battery percentage inside icon -->
+  <java-symbol type="bool" name="config_battery_percentage_show_inside_icon" />
+
 </resources>
