--- a/core/res/res/values/ex_config.xml
+++ b/core/res/res/values/ex_config.xml
@@ -167,6 +167,9 @@
     <!-- Whether to enable smart clock feature -->
     <bool name="config_enableSmartClock">false</bool>
 
+    <!-- Whether device has a physical display cutout -->
+    <bool name="config_physicalDisplayCutout">false</bool>
+
 </resources>
 
 
